# TeaAuctionAnalytics

./: .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pasted-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-head-tit-1733807617046.txt  README.md  SECURITY.md  console_error_fix.js  loading_animations.py  main.py  pyproject.toml  replit.md  styles.py  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
agent_assets/: auction-analytics_replit_app.md
assets/: default_data.csv
attached_assets/: Summary Sale 40_46.xlsx
