[project]
name = "repl-nix-salestrendanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.2",
    "openai==1.3.5",
    "openpyxl>=3.1.5",
    "pandas==2.1.3",
    "plotly-express",
    "plotly==5.18.0",
    "streamlit==1.29.0",
]
